<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather</string>
    <string name="location_permission_denied_info">Permission denied. Change them in the settings.</string>
    <string name="location_permission_denied_positive">Go to settings</string>
    <string name="location_permission_denied_negative">Exit</string>
    <string name="network_connection_failed">No Internet Connection</string>
    <string name="network_connection_alert_message">Please check your internet connection and try again</string>
    <string name="city_list_size_key" translatable="false">city_list_size</string>

    <!-- About app label's -->
    <string name="version_label">Version</string>
    <string name="developer_label">Developer</string>
    <string name="about_label">About</string>
    <string name="version_key" translatable="false">version</string>
    <string name="developer_mail" translatable="false">mbojec.dev@gmail.com</string>


    <!-- Label's -->
    <string name="fragment_label_settings">Settings</string>
    <string name="fragment_label_city_list">Choose city</string>
    <string name="fragment_label_city_search">Type city name</string>
    <string name="fragment_label_about_app">About app</string>


    <!-- Strings for new version alert dialog -->
    <string name="new_version_label">New version available</string>
    <string name="new_version_text">Please, update app to new version to benefit from tha latest solutions.</string>
    <string name="new_version_positive_button">Update</string>
    <string name="new_version_negative_button">No, thanks</string>

    <!-- Notification's strings -->
    <string name="system_notification_channel_id" translatable="false">system_channel</string>
    <string name="system_notification_channel_name">System notifications</string>
    <string name="system_notification_title">Weather</string>


    <!-- Strings for preferences -->
    <!-- Key name for local time zone preference in SharedPreferences -->
    <string name="pref_time_zone_key" translatable="false">time_zone</string>

    <!-- Value in SharedPreferences for positive location access option -->
    <string name="pref_time_zone_enabled" translatable="false">true</string>

    <!-- Value in SharedPreferences for negative location access option -->
    <string name="pref_time_zone_disabled" translatable="false">false</string>

    <!-- Label for time zone in preferences -->
    <string name="pref_time_zone_label">Local time zones</string>

    <!-- Summary on label for time zone in preferences -->
    <string name="pref_time_zone_summary_on">Show time according to local time zones</string>

    <!-- Summary off label for time zone in preferences -->
    <string name="pref_time_zone_summary_off">Show time according to current time zones</string>

    <string name="pref_units_label">Temperature</string>

    <!-- Label for metric option in temperature unit preference -->
    <string name="pref_units_label_metric">Celsius</string>

    <!-- Label for imperial option in temperature unit preference -->
    <string name="pref_units_label_imperial">Fahrenheit</string>

    <!-- Key name for temperature unit preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option -->
    <string name="pref_units_imperial" translatable="false">imperial</string>




    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format -->
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Wind speed formats -->
    <!-- Wind in mph  -->
    <string name="format_wind_mph" translatable="false"><xliff:g id="speed">%1$1.0f</xliff:g> mph </string>
    <!-- Wind in kph  -->
    <string name="format_wind_kmh" translatable="false"><xliff:g id="speed">%1$1.0f</xliff:g> km/h </string>

    <!-- Pressure format -->
    <string name="format_pressure" translatable="false"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format -->
    <string name="format_humidity" translatable="false"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Rain volume format -->
    <string name="format_rain" translatable="false"><xliff:g id="volume">%1$1.0f</xliff:g> mm</string>

    <!-- Cloudiness volume format -->
    <string name="format_cloudiness" translatable="false"><xliff:g id="cloudiness">%d</xliff:g> %%</string>

    <!-- UV index format -->
    <string name="format_uv_index" translatable="false"><xliff:g id="temp">%1.0f</xliff:g></string>


    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format -->
    <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>


    <!-- Wind direction -->
    <string name="n">north</string>
    <string name="s">south</string>
    <string name="e">east</string>
    <string name="w">west</string>
    <string name="ne">north-east</string>
    <string name="nw">north-west</string>
    <string name="se">south-east</string>
    <string name="sw">south-west</string>

    <!-- Forecast information label's -->
    <string name="label_sunset">Sunset</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_cloudiness">Cloudiness</string>
    <string name="label_rain">Rain volume</string>
    <string name="label_snow">Snow volume</string>
    <string name="label_wind_speed">Wind speed</string>
    <string name="label_wind">Wind</string>
    <string name="label_uv_index">UV Index</string>

    <!-- Forecast image view description -->
    <string name="content_desc" translatable="false">holder for forecast image</string>


</resources>
