<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:background="@color/dayColor">


    <TextView
            android:id="@+id/textView"
            style="@style/BasicTextView.LeftMargin"
            android:layout_marginTop="8dp"
            android:text="@string/label_sunrise"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_sunrise"
            style="@style/BasicTextView.LeftMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="04:43" />

    <TextView
            android:id="@+id/textView3"
            style="@style/BasicTextView.LeftLargeMargin"
            android:layout_marginTop="8dp"
            android:text="@string/label_sunset"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_sunset"
            style="@style/BasicTextView.LeftLargeMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="21:08" />

    <TextView
            android:id="@+id/textView5"
            style="@style/BasicTextView.UpperLeftMargin"
            android:text="@string/label_pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunrise" />

    <TextView
            android:id="@+id/textView6"
            style="@style/BasicTextView.LeftLargeMargin"
            android:text="@string/label_humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView20" />

    <TextView
            android:id="@+id/textView7"
            style="@style/BasicTextView.LeftLargeMargin"
            android:text="@string/label_cloudiness"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
            android:id="@+id/tv_pressure"
            style="@style/BasicTextView.LeftMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="1014 hPa" />

    <TextView
            android:id="@+id/tv_humidity"
            style="@style/BasicTextView.LeftLargeMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:text="0 %" />

    <TextView
            android:id="@+id/tv_clouidiness"
            style="@style/BasicTextView.LeftLargeMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="0 %" />

    <TextView
            android:id="@+id/tv_rain_volume"
            style="@style/BasicTextView.LeftLargeMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            tools:text="3 mm" />

    <TextView
            android:id="@+id/tv_wind_speed"
            style="@style/BasicTextView.LeftMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:text="3 km/h" />

    <TextView
            android:id="@+id/tv_wind_direction"
            style="@style/BasicTextView"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="@+id/textView20"
            tools:text="N" />

    <TextView
            android:id="@+id/textView18"
            style="@style/BasicTextView.LeftLargeMargin"
            android:text="@string/label_rain"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
            android:id="@+id/textView20"
            style="@style/BasicTextView.UpperLeftMargin"
            android:text="@string/label_wind"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    <TextView
            android:id="@+id/textView4"
            style="@style/BasicTextView.UpperLeftMargin"
            android:text="@string/label_uv_index"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_wind_speed" />

    <TextView
            android:id="@+id/tv_uv_index"
            style="@style/BasicTextView.LeftMargin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="7" />

</androidx.constraintlayout.widget.ConstraintLayout>